# smug

./: .gitignore  AUTHORS  Doxyfile-default  Doxyfile-tidy  Makefile.am  NEWS  README  README.in  THANKS  configure.ac  linustest.txt  reconf
api/python/: Makefile.am  main.c  module.c  module.h
api/python/script/: pysmug.py
apps/: .gitignore  Makefile.am  app-input.c  app-linus.c  app-shapes.c  app-sprites-go-engine.c  app-sprites-go.c  app-sprites.c  inputapp.sh  shapes.c  shapesapp.sh  spritesapp.sh
apps/android/apitest/: AndroidManifest.xml  build.xml
apps/android/apitest/jni/: Android.mk
apps/android/apitest/res/layout/: main.xml
apps/android/apitest/res/values/: strings.xml  styles.xml
apps/android/apitest/src/c/: se_lolektivet_apitest_DroidSmugGame.c  se_lolektivet_apitest_NativeFunctions.c  se_lolektivet_jolivi_NativeFunctions.c
apps/android/apitest/src/java/se/lolektivet/apitest/: ApitestActivity.java  DroidSmugGame.java
apps/android/apitest/src/java/se/lolektivet/jolivi/: JoLiViActivity.java
demo/: Makefile.am  demo-boxes.c  demo-drawable-rect.c  demo-input.c  demo-sprites.c  inputdemo.sh  pong.c  spritesdemo.sh
m4/: Makefile.am  ac_glew_devel.m4  ac_glfw_devel.m4  ac_python_devel.m4
python/tests/: hello.py
src/: .gitignore  Makefile.am  common.c  common.h  console.c  console.h  log.c  log.h  main.c  signal.c  signal.h  smug.h  smugstd.h
src/common/: Makefile.am  common.c  common.h  console.c  console.h  error.h  interface.c  interface.h  log.c  log.h  signal.c  signal.h
src/common/test/: Makefile.am  test-log.c  test-signal.c
src/engine/: Makefile.am  blocking_engine.c  blocking_engine.h  common.c  common.h  console.c  console.h  engine.c  engine.h  gameobject.c  gameobject.h  gameobject_decl.h  gameobject_internal.h  gameobject_protected.h  gameobject_type.h  gameobjectiterator.c  gameobjectiterator.h  interface.c  interface.h  interpoint.c  interpoint.h  log.c  log.h  position_object.c  position_object.h  position_object_type.h  positionedobject.c  positionedobject.h  positionedobject_internal.h  positionedobject_type.h  signal.c  signal.h  world.c  world.h
src/graphics/: Makefile.am  camera.c  camera.h  color.c  color.h  color_type.h  drawable.c  drawable.h  graphics.c  graphics.h  interface.c  interface.h  internal.h  sprite.c  sprite.h
src/graphics/drawable/: box.c  box.h  drawable.c  drawable.h  drawable_internal.h  drawable_type.h  drawableshape.c  drawableshape.h  drawableshape_type.h  sprite.c  sprite.h
src/graphics/image/: image.c  image.h
src/graphics/image/lodepng/: lodepng.c  lodepng.h
src/graphics/renderer/: batchdata.c  batchdata.h  layer.c  layer.h  renderbatch.c  renderbatch.h  renderer.c  renderer.h
src/graphics/test/: Makefile.am  test-image.c
src/graphics/texture/: texture.c  texture.h  texture_internal.h  texture_type.h
src/input/: Makefile.am  controller.c  controller.h  controllertype.c  controllertype.h  input.c  input.h  interface.c  interface.h
src/logic/: Makefile.am  interface.c  interface.h  logic.c  logic.h
src/logic/test/: Makefile.am
src/physics/: Makefile.am  Vector.c  Vector.h  body.c  body.h  calc.c  calc.h  debug.c  debug.h  interface.c  interface.h  physics.c  physics.h  rectangle.c  rectangle.h  shape.c  shape.h  shapes.c  shapes.h  vector.c  vector.h  waypoint.c  waypoint.h
src/physics/test/: Makefile.am  test-polygon.c  test-vector.c
src/platform/: Makefile.am  console.c  console.h  file.c  file.h  interface.c  interface.h  platform.c  platform.h  smugstd.c  smugstd.h  threads.c  threads.h
src/platform/android/: console.c  input.c  jnihelpers.h  physics_debug.c  platform.c  smugstd.c  smugstd.h  threads.c
src/platform/android/platform/opengl/: importgl.c  importgl.h  opengl.h
src/platform/opengl/: opengl.h
src/platform/test/: Makefile.am  test-thread.c
src/script/: Makefile.am  script.h
src/script/python/: module.c  module.h  pyscript.c
src/utils/: LinkedList.h  Makefile.am  arraylist.c  arraylist.h  binarysearchtree.c  binarysearchtree.h  hook.c  hook.h  interface.c  interface.h  linkedlist.c  linkedlist.h  linkedlistiterator.c  linkedlistiterator.h  map.c  map.h  orderedset.c  orderedset.h  pair.c  pair.h  pathname.c  pathname.h  point.c  point.h  point_type.h  rectangle.c  rectangle.h  rectangle_type.h  shape.c  shape.h  shape_type.h  shapes.c  shapes.h  sstring.c  sstring.h  string.c  string.h  vector.c  vector.h  vector_type.h
src/utils/test/: Makefile.am  test-arraylist.c  test-binarysearchtree.c  test-hook.c  test-linkedlist.c  test-linkedlistiterator.c  test-map.c  test-orderedset.c  test-pathname.c  test-string.c  test-vector.c
src/utils/tests/: Makefile.am  test-hooks.c
test/: Makefile.am  test-gameobject.c  test-world.c
test-utils/: Makefile.am  assert.c  assert.h
tests/: Makefile.am  test-linkedlist.c  test-vector.c  test-world.c
