# Copyright (C) 2009 Anders Andersson <finrist@gmail.com>
#  
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without 
# modifications, as long as this notice is preserved.
# 
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

SUBDIRS = . test

AM_CFLAGS = -I.. -I../common

noinst_LTLIBRARIES = libphysics.la
libphysics_la_SOURCES = interface.c interface.h physics.c physics.h\
shapes.c shapes.h\
body.c body.h \
debug.c debug.h \
waypoint.c waypoint.h