# Copyright (C) 2009 Anders Andersson <finrist@gmail.com>
#  
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without 
# modifications, as long as this notice is preserved.
# 
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

AM_CFLAGS = $(LIBGLFWCFLAGS)  -I.. #Why cannot this be included as well? -I../common

noinst_LIBRARIES = libscript.a

libscript_a_SOURCES =  python/pyscript.c script.h \
	python/module.c python/module.c